# clockify_tracker

./: .gitignore  Cargo.toml  README.md
contrib/: Settings-sample.toml
src/: main.rs
