[package]
name = "clockify_traker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
config = "0.13.1"
reqwest = "0.11.10"
